<resources>
    <string name="scut_deleted_pc">PC deleted</string>
    <string name="scut_not_paired">PC not paired</string>
    <string name="scut_pc_not_found">PC not found</string>
    <string name="scut_invalid_uuid">Provided PC is not valid</string>
    <string name="scut_invalid_app_id">Provided App is not valid</string>
    <string name="help_loading_title">Help Viewer</string>
    <string name="help_loading_msg">Loading help page…</string>
    <string name="pcview_menu_header_online">Online</string>
    <string name="pcview_menu_header_offline">Offline</string>
    <string name="pcview_menu_header_unknown">Refreshing</string>
    <string name="pcview_menu_app_list">View All Apps</string>
    <string name="pcview_menu_pair_pc">Pair with PC</string>
    <string name="pcview_menu_unpair_pc">Unpair</string>
    <string name="pcview_menu_send_wol">Send Wake-On-LAN request</string>
    <string name="pcview_menu_delete_pc">Delete PC</string>
    <string name="pcview_menu_details">View Details</string>
    <string name="pairing">Pairing…</string>
    <string name="pair_pc_offline">Computer is offline</string>
    <string name="pair_pc_ingame">Computer is currently in a game. You must close the game before pairing.</string>
    <string name="pair_pairing_title">Pairing</string>
    <string name="pair_pairing_msg">Please enter the following PIN on the target PC:</string>
    <string name="pair_pairing_help">Enter this PIN on your host\'s pairing page (in Shell: web UI → Pairing).</string>
    <string name="pair_incorrect_pin">Incorrect PIN</string>
    <string name="pair_fail">Pairing failed</string>
    <string name="pair_already_in_progress">Pairing already in progress</string>
    <string name="wol_pc_online">Computer is online</string>
    <string name="wol_no_mac">Unable to wake PC because there is no stored MAC address</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_basic_settings">Basic Settings</string>
    <string name="title_resolution_list">Video resolution</string>
    <string name="summary_resolution_list">Increase to improve image clarity. Decrease for better performance on lower end devices and slower networks.</string>
    <string name="title_fps_list">Video frame rate</string>
    <string name="summary_fps_list">Increase for a smoother video stream. Decrease for better performance on lower end devices.</string>
    <string name="title_seekbar_bitrate">Video bitrate</string>
    <string name="summary_seekbar_bitrate">Increase for better image quality. Decrease to improve performance on slower connections.</string>
    <string name="suffix_seekbar_bitrate_mbps">Mbps</string>
    <string name="title_checkbox_stretch_video">Stretch video to full-screen</string>
    <string name="category_audio_settings">Audio Settings</string>
    <string name="title_audio_config_list">Surround sound configuration</string>
    <string name="summary_audio_config_list">Enable 5.1 or 7.1 surround sound for home-theater systems</string>
    <string name="title_checkbox_enable_audiofx">Enable system equalizer support</string>
    <string name="summary_checkbox_enable_audiofx">Allows audio effects to function while streaming, but may increase audio latency</string>
    <string name="category_gamepad_settings">Gamepad Settings</string>
    <string name="title_checkbox_multi_controller">Automatic gamepad presence detection</string>
    <string name="summary_checkbox_multi_controller">Unchecking this option forces a gamepad to always be present</string>
    <string name="title_checkbox_vibrate_fallback">Emulate rumble support with vibration</string>
    <string name="summary_checkbox_vibrate_fallback">Vibrates your device to emulate rumble if your gamepad does not support it</string>
    <string name="title_seekbar_vibrate_fallback_strength">Adjust emulated rumble intensity</string>
    <string name="summary_seekbar_vibrate_fallback_strength">Amplify or reduce the vibration intensity on your device</string>
    <string name="suffix_seekbar_vibrate_fallback_strength">%</string>
    <string name="title_seekbar_deadzone">Adjust analog stick deadzone</string>
    <string name="summary_seekbar_deadzone">Note: Some games can enforce a larger deadzone than what Hermit is configured to use.</string>
    <string name="suffix_seekbar_deadzone">%</string>
    <string name="title_checkbox_xb1_driver">Xbox 360/One USB gamepad driver</string>
    <string name="summary_checkbox_xb1_driver">Enables a built-in USB driver for devices without native Xbox controller support</string>
    <string name="title_checkbox_usb_bind_all">Override native Xbox gamepad support</string>
    <string name="summary_checkbox_usb_bind_all">Use Hermit\'s USB driver for all supported gamepads, even if native Xbox controller support is present</string>
    <string name="title_checkbox_mouse_emulation">Mouse emulation via gamepad</string>
    <string name="summary_checkbox_mouse_emulation">Long pressing the Start button will switch the gamepad into mouse mode</string>
    <string name="title_checkbox_flip_face_buttons">Flip face buttons</string>
    <string name="summary_checkbox_flip_face_buttons">Switches the face buttons A/B and X/Y for gamepads and the on-screen controls</string>
    <string name="title_checkbox_gamepad_touchpad_as_mouse">Always control mouse with touchpad</string>
    <string name="summary_checkbox_gamepad_touchpad_as_mouse">Forces gamepad touchpad input to control the host mouse, even when emulating a gamepad with a touchpad.</string>
    <string name="title_checkbox_gamepad_motion_sensors">Allow use of gamepad motion sensors</string>
    <string name="summary_checkbox_gamepad_motion_sensors">Enables supported hosts to request motion sensor data when emulating a gamepad with motion sensors. Disabling may slightly reduce power and network usage if motion sensors are not being used in game.</string>
    <string name="title_checkbox_gamepad_motion_fallback">Emulate gamepad motion sensor support</string>
    <string name="summary_checkbox_gamepad_motion_fallback">Uses your device\'s built-in motion sensors if gamepad sensors are not supported by your connected gamepad or your Android version.\nNote: Enabling this option may cause your gamepad to appear as a PlayStation controller on the host.</string>
    <string name="category_input_settings">Input Settings</string>
    <string name="title_checkbox_touchscreen_trackpad">Use the touchscreen as a trackpad</string>
    <string name="summary_checkbox_touchscreen_trackpad">If enabled, the touchscreen acts like a trackpad. If disabled, the touchscreen directly controls the mouse cursor.</string>
    <string name="title_checkbox_absolute_mouse_mode">Remote desktop mouse mode</string>
    <string name="summary_checkbox_absolute_mouse_mode">This can make mouse acceleration behave more naturally for remote desktop usage, but it is incompatible with many games.</string>
    <string name="title_checkbox_mouse_nav_buttons">Enable back and forward mouse buttons</string>
    <string name="summary_checkbox_mouse_nav_buttons">Enabling this option may break right clicking on some buggy devices</string>
    <string name="category_on_screen_controls_settings">On-screen Controls Settings</string>
    <string name="title_checkbox_show_onscreen_controls">Show on-screen controls</string>
    <string name="summary_checkbox_show_onscreen_controls">Show virtual controller overlay on touchscreen</string>
    <string name="title_checkbox_vibrate_osc">Enable vibration</string>
    <string name="summary_checkbox_vibrate_osc">Vibrates your device to emulate rumble for the on-screen controls</string>
    <string name="title_only_l3r3">Only show L3 and R3</string>
    <string name="summary_only_l3r3">Hide all virtual buttons except L3 and R3</string>
    <string name="title_show_guide_button">Show Guide Button</string>
    <string name="summary_show_guide_button">Show the guide button on screen</string>
    <string name="title_reset_osc">Clear saved on-screen controls layout</string>
    <string name="summary_reset_osc">Resets all on-screen controls to their default size and position</string>
    <string name="dialog_title_reset_osc">Reset Layout</string>
    <string name="dialog_text_reset_osc">Are you sure you want to delete your saved on-screen controls layout?</string>
    <string name="summary_osc_opacity">Make the on-screen controls more/less transparent</string>
    <string name="dialog_title_osc_opacity">Change opacity</string>
    <string name="suffix_osc_opacity">%</string>
    <string name="category_ui_settings">UI Settings</string>
    <string name="title_checkbox_enable_pip">Enable Picture-in-Picture observer mode</string>
    <string name="summary_checkbox_enable_pip">Allows the stream to be viewed (but not controlled) while multitasking</string>
    <string name="title_language_list">Language</string>
    <string name="summary_language_list">Language to use for Hermit</string>
    <string name="title_checkbox_small_icon_mode">Use small box art</string>
    <string name="summary_checkbox_small_icon_mode">Smaller box art in the app grid allows more apps to be visible on screen</string>
    <string name="category_host_settings">Host Settings</string>
    <string name="title_checkbox_enable_sops">Optimize game settings</string>
    <string name="summary_checkbox_enable_sops">Allow the host to change game settings for the best streaming</string>
    <string name="title_checkbox_host_audio">Play audio on PC</string>
    <string name="summary_checkbox_host_audio">Play audio from the computer and this device</string>
    <string name="category_advanced_settings">Advanced Settings</string>
    <string name="title_unlock_fps">Unlock all possible frame rates</string>
    <string name="summary_unlock_fps">Streaming at 90 or 120 FPS may reduce latency on high-end devices but can cause lag or instability on devices that can\'t support it</string>
    <string name="title_checkbox_reduce_refresh_rate">Allow refresh rate reduction</string>
    <string name="summary_checkbox_reduce_refresh_rate">Lower display refresh rates can save power at the expense of some additional video latency</string>
    <string name="title_checkbox_disable_warnings">Disable warning messages</string>
    <string name="summary_checkbox_disable_warnings">Disable on-screen connection warning messages while streaming</string>
    <string name="title_video_format">Change codec settings</string>
    <string name="summary_video_format">Newer codecs can lower video bandwidth requirements if your device supports them. Codec selections may be ignored if not supported by the host software or GPU.</string>
    <string name="title_enable_hdr">Enable HDR (Experimental)</string>
    <string name="summary_enable_hdr">Stream HDR when the game and PC GPU support it. HDR requires a GPU with HEVC Main 10 encoding support.</string>
    <string name="title_full_range">Force full range video (Experimental)</string>
    <string name="summary_full_range">This will cause loss of detail in light and dark areas if your device doesn\'t properly display full range video content.</string>
    <string name="title_enable_perf_overlay">Show performance stats while streaming</string>
    <string name="summary_enable_perf_overlay">Display real-time stream performance information while streaming</string>
    <string name="title_enable_post_stream_toast">Show latency message after streaming</string>
    <string name="summary_enable_post_stream_toast">Display a latency information message after the stream ends</string>
    <string name="title_frame_pacing">Video frame pacing</string>
    <string name="summary_frame_pacing">Specify how to balance video latency and smoothness</string>
    <string name="title_analog_scrolling">Use an analog stick to scroll</string>
    <string name="summary_analog_scrolling">Select an analog stick to scroll when in mouse emulation mode</string>
</resources>