<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekbar="https://github.com/junopark00/hermit-android/seekbar">

    <PreferenceCategory android:title="@string/category_basic_settings"
        android:key="category_basic_settings">
        <ListPreference
            android:key="list_resolution"
            android:title="@string/title_resolution_list"
            android:summary="@string/summary_resolution_list"
            android:entries="@array/resolution_names"
            android:entryValues="@array/resolution_values"
            android:defaultValue="1280x720" />
        <ListPreference
            android:key="list_fps"
            android:title="@string/title_fps_list"
            android:summary="@string/summary_fps_list"
            android:entries="@array/fps_names"
            android:entryValues="@array/fps_values"
            android:defaultValue="60" />
        <com.junopark.hermit.preferences.SeekBarPreference
            android:key="seekbar_bitrate_kbps"
            android:dialogMessage="@string/summary_seekbar_bitrate"
            seekbar:min="500"
            android:max="150000"
            seekbar:step="500"
            seekbar:keyStep="1000"
            seekbar:divisor="1000"
            android:summary="@string/summary_seekbar_bitrate"
            android:text="@string/suffix_seekbar_bitrate_mbps"
            android:title="@string/title_seekbar_bitrate" />
        <CheckBoxPreference
            android:key="checkbox_hermit_auto_bitrate"
            android:title="@string/title_checkbox_hermit_auto_bitrate"
            android:summary="@string/summary_checkbox_hermit_auto_bitrate"
            android:defaultValue="false" />
        <ListPreference
            android:key="frame_pacing"
            android:title="@string/title_frame_pacing"
            android:entries="@array/video_frame_pacing_names"
            android:entryValues="@array/video_frame_pacing_values"
            android:summary="@string/summary_frame_pacing"
            android:defaultValue="latency" />
        <CheckBoxPreference
            android:key="checkbox_stretch_video"
            android:title="@string/title_checkbox_stretch_video"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_audio_settings">
        <ListPreference
            android:key="list_audio_config"
            android:title="@string/title_audio_config_list"
            android:summary="@string/summary_audio_config_list"
            android:entries="@array/audio_config_names"
            android:entryValues="@array/audio_config_values"
            android:defaultValue="2" />
        <CheckBoxPreference
            android:key="checkbox_enable_audiofx"
            android:title="@string/title_checkbox_enable_audiofx"
            android:summary="@string/summary_checkbox_enable_audiofx"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_gamepad_settings"
        android:key="category_gamepad_settings">
        <com.junopark.hermit.preferences.SeekBarPreference
            android:key="seekbar_deadzone"
            android:defaultValue="7"
            android:max="20"
            android:summary="@string/summary_seekbar_deadzone"
            android:text="@string/suffix_seekbar_deadzone"
            android:title="@string/title_seekbar_deadzone"/>
        <CheckBoxPreference
            android:key="checkbox_multi_controller"
            android:title="@string/title_checkbox_multi_controller"
            android:summary="@string/summary_checkbox_multi_controller"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="checkbox_usb_driver"
            android:title="@string/title_checkbox_xb1_driver"
            android:summary="@string/summary_checkbox_xb1_driver"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="checkbox_usb_bind_all"
            android:dependency="checkbox_usb_driver"
            android:title="@string/title_checkbox_usb_bind_all"
            android:summary="@string/summary_checkbox_usb_bind_all"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_mouse_emulation"
            android:title="@string/title_checkbox_mouse_emulation"
            android:summary="@string/summary_checkbox_mouse_emulation"
            android:defaultValue="true" />
        <ListPreference
            android:key="analog_scrolling"
            android:dependency="checkbox_mouse_emulation"
            android:title="@string/title_analog_scrolling"
            android:summary="@string/summary_analog_scrolling"
            android:entries="@array/analog_scrolling_names"
            android:entryValues="@array/analog_scrolling_values"
            android:defaultValue="right" />
        <CheckBoxPreference
            android:key="checkbox_vibrate_fallback"
            android:title="@string/title_checkbox_vibrate_fallback"
            android:summary="@string/summary_checkbox_vibrate_fallback"
            android:defaultValue="false" />
        <com.junopark.hermit.preferences.SeekBarPreference
            android:key="seekbar_vibrate_fallback_strength"
            android:dependency="checkbox_vibrate_fallback"
            android:defaultValue="100"
            android:max="200"
            android:summary="@string/summary_seekbar_vibrate_fallback_strength"
            android:text="@string/suffix_seekbar_vibrate_fallback_strength"
            android:title="@string/title_seekbar_vibrate_fallback_strength"/>
        <CheckBoxPreference
            android:key="checkbox_flip_face_buttons"
            android:title="@string/title_checkbox_flip_face_buttons"
            android:summary="@string/summary_checkbox_flip_face_buttons"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_gamepad_touchpad_as_mouse"
            android:title="@string/title_checkbox_gamepad_touchpad_as_mouse"
            android:summary="@string/summary_checkbox_gamepad_touchpad_as_mouse"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_gamepad_motion_sensors"
            android:title="@string/title_checkbox_gamepad_motion_sensors"
            android:summary="@string/summary_checkbox_gamepad_motion_sensors"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="checkbox_gamepad_motion_fallback"
            android:title="@string/title_checkbox_gamepad_motion_fallback"
            android:summary="@string/summary_checkbox_gamepad_motion_fallback"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_input_settings"
        android:key="category_input_settings">
        <CheckBoxPreference
            android:key="checkbox_touchscreen_trackpad"
            android:title="@string/title_checkbox_touchscreen_trackpad"
            android:summary="@string/summary_checkbox_touchscreen_trackpad"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_mouse_nav_buttons"
            android:title="@string/title_checkbox_mouse_nav_buttons"
            android:summary="@string/summary_checkbox_mouse_nav_buttons"
            android:defaultValue="false" />
        <!-- Hermit -->
        <ListPreference
            android:key="list_hermit_panel_handle_side"
            android:title="@string/title_hermit_panel_handle_side"
            android:summary="%s"
            android:entries="@array/hermit_panel_handle_side_names"
            android:entryValues="@array/hermit_panel_handle_side_values"
            android:defaultValue="right" />
        <CheckBoxPreference
            android:key="checkbox_hermit_pinch_zoom"
            android:title="@string/title_checkbox_hermit_pinch_zoom"
            android:summary="@string/summary_checkbox_hermit_pinch_zoom"
            android:defaultValue="true" />
        <com.junopark.hermit.preferences.SeekBarPreference
            android:key="seekbar_hermit_trackpad_speed"
            android:dependency="checkbox_touchscreen_trackpad"
            android:title="@string/title_hermit_trackpad_speed"
            android:summary="@string/summary_hermit_trackpad_speed"
            android:dialogMessage="@string/summary_hermit_trackpad_speed"
            seekbar:min="50"
            android:max="300"
            seekbar:step="10"
            android:text="%"
            android:defaultValue="100" />
        <com.junopark.hermit.preferences.SeekBarPreference
            android:key="seekbar_hermit_scroll_speed"
            android:title="@string/title_hermit_scroll_speed"
            android:summary="@string/summary_hermit_scroll_speed"
            android:dialogMessage="@string/summary_hermit_scroll_speed"
            seekbar:min="25"
            android:max="300"
            seekbar:step="5"
            android:text="%"
            android:defaultValue="100" />
        <Preference
            android:key="hermit_keypad_editor"
            android:title="@string/title_hermit_keypad"
            android:summary="@string/summary_hermit_keypad" />
        <CheckBoxPreference
            android:key="checkbox_absolute_mouse_mode"
            android:title="@string/title_checkbox_absolute_mouse_mode"
            android:summary="@string/summary_checkbox_absolute_mouse_mode"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_on_screen_controls_settings"
        android:key="category_onscreen_controls">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="checkbox_show_onscreen_controls"
            android:summary="@string/summary_checkbox_show_onscreen_controls"
            android:title="@string/title_checkbox_show_onscreen_controls" />
        <CheckBoxPreference
            android:key="checkbox_vibrate_osc"
            android:dependency="checkbox_show_onscreen_controls"
            android:title="@string/title_checkbox_vibrate_osc"
            android:summary="@string/summary_checkbox_vibrate_osc"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="checkbox_show_onscreen_controls"
            android:key="checkbox_only_show_L3R3"
            android:summary="@string/summary_only_l3r3"
            android:title="@string/title_only_l3r3" />
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:dependency="checkbox_show_onscreen_controls"
            android:key="checkbox_show_guide_button"
            android:summary="@string/summary_show_guide_button"
            android:title="@string/title_show_guide_button" />
        <com.junopark.hermit.preferences.SeekBarPreference
            android:key="seekbar_osc_opacity"
            android:dependency="checkbox_show_onscreen_controls"
            android:dialogMessage="@string/summary_osc_opacity"
            seekbar:min="0"
            seekbar:step="1"
            android:max="100"
            android:defaultValue="90"
            android:summary="@string/summary_osc_opacity"
            android:text="@string/suffix_osc_opacity"
            android:title="@string/dialog_title_osc_opacity" />
        <com.junopark.hermit.preferences.ConfirmDeleteOscPreference
            android:title="@string/title_reset_osc"
            android:summary="@string/summary_reset_osc"
            android:dialogTitle="@string/dialog_title_reset_osc"
            android:dialogMessage="@string/dialog_text_reset_osc"
            android:positiveButtonText="@string/yes"
            android:negativeButtonText="@string/no"
            />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_host_settings">
        <CheckBoxPreference
            android:key="checkbox_enable_sops"
            android:title="@string/title_checkbox_enable_sops"
            android:summary="@string/summary_checkbox_enable_sops"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="checkbox_host_audio"
            android:title="@string/title_checkbox_host_audio"
            android:summary="@string/summary_checkbox_host_audio"
            android:defaultValue="false" />
        <!-- Hermit -->
        <CheckBoxPreference
            android:key="checkbox_hermit_clipboard_sync"
            android:title="@string/title_checkbox_clipboard_sync"
            android:summary="@string/summary_checkbox_clipboard_sync"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="checkbox_hermit_auto_reconnect"
            android:title="@string/title_checkbox_auto_reconnect"
            android:summary="@string/summary_checkbox_auto_reconnect"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_ui_settings"
        android:key="category_ui_settings">
        <CheckBoxPreference
            android:key="checkbox_enable_pip"
            android:title="@string/title_checkbox_enable_pip"
            android:summary="@string/summary_checkbox_enable_pip"
            android:defaultValue="false" />
        <com.junopark.hermit.preferences.LanguagePreference
            android:key="list_languages"
            android:title="@string/title_language_list"
            android:entries="@array/language_names"
            android:entryValues="@array/language_values"
            android:summary="@string/summary_language_list"
            android:defaultValue="default" />
        <com.junopark.hermit.preferences.SmallIconCheckboxPreference
            android:key="checkbox_small_icon_mode"
            android:title="@string/title_checkbox_small_icon_mode"
            android:summary="@string/summary_checkbox_small_icon_mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_advanced_settings"
        android:key="category_advanced_settings">
        <CheckBoxPreference
            android:key="checkbox_unlock_fps"
            android:title="@string/title_unlock_fps"
            android:summary="@string/summary_unlock_fps"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_reduce_refresh_rate"
            android:title="@string/title_checkbox_reduce_refresh_rate"
            android:summary="@string/summary_checkbox_reduce_refresh_rate"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_disable_warnings"
            android:title="@string/title_checkbox_disable_warnings"
            android:summary="@string/summary_checkbox_disable_warnings"
            android:defaultValue="false" />
        <ListPreference
            android:key="video_format"
            android:title="@string/title_video_format"
            android:entries="@array/video_format_names"
            android:entryValues="@array/video_format_values"
            android:summary="@string/summary_video_format"
            android:defaultValue="auto" />
        <CheckBoxPreference
            android:key="checkbox_enable_hdr"
            android:title="@string/title_enable_hdr"
            android:summary="@string/summary_enable_hdr"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_full_range"
            android:title="@string/title_full_range"
            android:summary="@string/summary_full_range"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_enable_perf_overlay"
            android:title="@string/title_enable_perf_overlay"
            android:summary="@string/summary_enable_perf_overlay"
            android:defaultValue="false"/>
        <!-- Hermit: performance overlay rows and text size -->
        <MultiSelectListPreference
            android:key="list_hermit_overlay_metrics"
            android:dependency="checkbox_enable_perf_overlay"
            android:title="@string/title_hermit_overlay_metrics"
            android:summary="@string/summary_hermit_overlay_metrics"
            android:entries="@array/hermit_overlay_metric_names"
            android:entryValues="@array/hermit_overlay_metric_values"
            android:defaultValue="@array/hermit_overlay_metric_defaults" />
        <ListPreference
            android:key="list_hermit_overlay_text_size"
            android:dependency="checkbox_enable_perf_overlay"
            android:title="@string/title_hermit_overlay_text_size"
            android:summary="%s"
            android:entries="@array/hermit_overlay_size_names"
            android:entryValues="@array/hermit_overlay_size_values"
            android:defaultValue="medium" />
        <CheckBoxPreference
            android:key="checkbox_enable_post_stream_toast"
            android:title="@string/title_enable_post_stream_toast"
            android:summary="@string/summary_enable_post_stream_toast"
            android:defaultValue="false"/>
        <!-- Hermit -->
        <CheckBoxPreference
            android:key="checkbox_hermit_session_summary"
            android:title="@string/title_checkbox_session_summary"
            android:summary="@string/summary_checkbox_session_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
